added proper posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
   More info: h5bp.com/i/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Nightingales | {{ page.title }}</title>
-  <meta name="description" content="Nightingales - Residential Property Management">
+  <title>Nightingale | {{ page.title }}</title>
+  <meta name="description" content="Tom's blog">
   <meta name="author" content="Tom Nightingale">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -37,25 +37,25 @@
      chromium.org/developers/how-tos/chrome-frame-getting-started -->
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 <header role="banner">
-  <div class="inner">
-    <a href="{{ site.base-url }}/">
-    <hgroup>
-      <div id="logo"></div><h1>Nightingale</h1>
-      <h4>Residential Property Management</h4>
-    </hgroup>
-    </a>
-  </div>
+  <!-- <div class="inner"> -->
+  <!--   <a href="{{ site.base-url }}/"> -->
+  <!--   <hgroup> -->
+  <!--     <div id="logo"></div><h1>Nightingale</h1> -->
+  <!--     <h4>Residential Property Management</h4> -->
+  <!--   </hgroup> -->
+  <!--   </a> -->
+  <!-- </div> -->
 
-  <nav>
-  <div class="inner">
-    <ul>
-      <li><a href='{{ site.base-url }}/'>Home</a></li>
-      <li><a href='{{ site.base-url }}/properties'>Properties</a></li>
-      <li><a href='{{ site.base-url }}/owners.html'>Owners</a></li>
-      <li><a href='{{ site.base-url }}/tenants.html'>Tenants</a></li>
-    </ul>
-  </div>
-  </nav>
+  <!-- <nav> -->
+  <!-- <div class="inner"> -->
+  <!--   <ul> -->
+  <!--     <li><a href='{{ site.base-url }}/'>Home</a></li> -->
+  <!--     <li><a href='{{ site.base-url }}/properties'>Properties</a></li> -->
+  <!--     <li><a href='{{ site.base-url }}/owners.html'>Owners</a></li> -->
+  <!--     <li><a href='{{ site.base-url }}/tenants.html'>Tenants</a></li> -->
+  <!--   </ul> -->
+  <!-- </div> -->
+  <!-- </nav> -->
 </header>
 
 <div role="main">
@@ -63,7 +63,7 @@
 </div>
 
 <footer>
-  <p>Site by Tom Nightingale</p>
+  <!-- <p>Site by Tom Nightingale</p> -->
 </footer>
 
 
